# blocklist-generator

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  blocklist-generator.toml  deny.toml  dprint.json  justfile  yek.yaml
.github/workflows/: audit-on-push.yml  dependency-review.yml  devskim.yml  general.yml  links.yml  pre-commit.yml  safety.yaml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
docs/: index.md
src/: cli.rs  fetch.rs  file_system.rs  filter.rs  main.rs  parse.rs
src/snapshots/: blocklist_generator__file_system__tests__get_config_from_file_successfully_parses_valid_file.snap
supply-chain/: audits.toml  config.toml
