[package]
name = "blocklist-generator"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/blocklist-generator"
# wiremock v0.6.3 MSRV is 1.81
rust-version = "1.74"
description = "CLI utility for generating blocklist.rpz files for use with firewalls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.98"
askama = "0.14.0"
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.8"
futures = "0.3.31"
humansize = "2.1.3"
hyper = "1.6.0"
log = "0.4.27"
nom = "8.0.0"
num-format = "0.4.4"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = { version = "0.8.22", features = ["parse"] }
url = "2.5.4"

[dev-dependencies]
assert_fs = "1.1.3"
fake = "4.3.0"
insta = { version = "1.43.1", features = ["glob", "json"] }
proptest = "1.6.0"
wiremock = "0.6.3"
