[package]
name = "blocklist-generator"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/blocklist-generator"
# askama v0.14.0 MSRV is 1.83
rust-version = "1.83"
description = "CLI utility for generating blocklist.rpz files for use with firewalls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
askama = "0.14.0"
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
futures = "0.3.31"
humansize = "2.1.3"
hyper = "1.8.1"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
nom = "8.0.0"
num-format = "0.4.4"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = { version = "0.9.8", features = ["parse", "serde", "std"] }
url = "2.5.7"

[dev-dependencies]
assert_fs = "1.1.3"
fake = "4.4.0"
insta = { version = "1.43.2", features = ["glob", "json"] }
proptest = "1.9.0"
wiremock = "0.6.5"
