[package]
name = "blocklist-generator"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/blocklist-generator"
# askama 0.16.0 requires 1.88
rust-version = "1.88"
description = "CLI utility for generating blocklist.rpz files for use with firewalls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
askama = "0.16.0"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
futures = "0.3.32"
humansize = "2.1.3"
hyper = "1.9.0"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
nom = "8.0.0"
num-format = "0.4.4"
reqwest = "0.13.3"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "serde_json", "url", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2", features = ["parse", "serde", "std"] }
url = "2.5.8"

[dev-dependencies]
assert_fs = "1.1.3"
fake = "5.1.0"
insta = { version = "1.47.2", features = ["glob", "json"] }
proptest = "1.11.0"
wiremock = "0.6.5"
